Fixed a bug in table content resolution. Various "tweaks" in other stuff.