@@ -114,8 +114,9 @@ public class Eeze {
         SwingUtilities.invokeLater(new Runnable() {
             public void run() {
                 try {
+                    File fontFile = new File(directory + "/support/AHEM____.TTF");
                     html.getRenderingContext().setFontMapping("Ahem",
-                            Font.createFont(Font.TRUETYPE_FONT, new URL("file://" + directory + "/support/AHEM____.TTF").openStream()));
+                            Font.createFont(Font.TRUETYPE_FONT, fontFile.toURL().openStream()));
                 } catch (FontFormatException e) {
                     e.printStackTrace();  //To change body of catch statement use File | Settings | File Templates.
                 } catch (IOException e) {
